<?xml version="1.0"?>
<package format="2">
  <name>mavros_web_components</name>
  <version>0.0.0</version>
  <description>MAVROS Web Components package</description>

  <maintainer email="robert.clarke@bristol.ac.uk">Robert Clarke</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="robert.clarke@bristol.ac.uk">Robert Clarke</author>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Funky node dependency due to libssl dependency hell -->
  <!-- https://github.com/ros/rosdistro/issues/19845 -->
  <!--<build_depend>nodejs=8.10.0~dfsg-2ubuntu0.2</build_depend>-->
  <!--<build_depend>npm</build_depend>-->

  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
